[gd_scene load_steps=8 format=3 uid="uid://drsgi6n30r0x0"]

[ext_resource type="Script" path="res://Objects/Crate.gd" id="1"]
[ext_resource type="ArrayMesh" uid="uid://d1xujmq0edwmg" path="res://Art/Objects/crateStrong.obj" id="2"]

[sub_resource type="StandardMaterial3D" id="1"]
resource_name = "metal"
albedo_color = Color(0.784314, 0.807843, 0.890196, 1)

[sub_resource type="StandardMaterial3D" id="2"]
resource_local_to_scene = true
resource_name = "heart"
albedo_color = Color(0.976471, 0.290196, 0.372549, 1)

[sub_resource type="ArrayMesh" id="3"]
resource_local_to_scene = true
_surfaces = [{
"aabb": AABB(-0.3, 0, -0.3, 0.6, 0.1, 0.6),
"attribute_data": PackedByteArray(0, 32, 218, 191, 0, 224, 119, 191, 0, 32, 218, 63, 0, 0, 128, 63, 0, 32, 218, 191, 0, 0, 128, 63, 0, 32, 218, 63, 0, 224, 119, 191, 0, 224, 251, 192, 0, 224, 119, 191, 0, 224, 251, 64, 0, 224, 59, 192, 0, 224, 251, 64, 0, 224, 119, 191, 0, 224, 251, 192, 0, 224, 59, 192, 0, 32, 218, 191, 0, 192, 65, 65, 0, 32, 218, 63, 0, 32, 11, 65, 0, 32, 218, 63, 0, 192, 65, 65, 0, 32, 218, 191, 0, 32, 11, 65, 0, 32, 218, 63, 0, 32, 11, 65, 0, 32, 218, 191, 0, 192, 65, 65, 0, 32, 218, 191, 0, 32, 11, 65, 0, 32, 218, 63, 0, 192, 65, 65, 0, 96, 22, 193, 0, 160, 254, 64, 0, 192, 237, 64, 0, 160, 165, 64, 0, 96, 22, 65, 0, 160, 254, 64, 0, 192, 237, 192, 0, 160, 165, 64, 0, 224, 251, 192, 0, 224, 119, 191, 0, 224, 251, 64, 0, 224, 59, 192, 0, 224, 251, 64, 0, 224, 119, 191, 0, 224, 251, 192, 0, 224, 59, 192, 0, 32, 218, 63, 0, 0, 128, 63, 0, 32, 218, 191, 0, 224, 119, 191, 0, 32, 218, 63, 0, 224, 119, 191, 0, 32, 218, 191, 0, 0, 128, 63, 0, 96, 22, 65, 0, 0, 128, 63, 0, 96, 22, 193, 0, 224, 119, 191, 0, 96, 22, 65, 0, 224, 119, 191, 0, 96, 22, 193, 0, 0, 128, 63, 0, 96, 22, 193, 0, 0, 128, 63, 0, 96, 22, 65, 0, 224, 119, 191, 0, 96, 22, 65, 0, 0, 128, 63, 0, 96, 22, 193, 0, 224, 119, 191, 0, 224, 251, 192, 0, 224, 59, 192, 0, 224, 251, 64, 0, 224, 119, 191, 0, 224, 251, 192, 0, 224, 119, 191, 0, 224, 251, 64, 0, 224, 59, 192, 0, 32, 218, 63, 0, 192, 65, 65, 0, 32, 218, 191, 0, 32, 11, 65, 0, 32, 218, 63, 0, 32, 11, 65, 0, 32, 218, 191, 0, 192, 65, 65, 0, 224, 251, 192, 0, 224, 13, 65, 0, 96, 29, 193, 0, 224, 6, 65, 0, 96, 29, 193, 0, 192, 205, 192, 0, 192, 237, 192, 0, 96, 45, 65, 0, 224, 251, 64, 0, 224, 13, 65, 0, 192, 237, 64, 0, 96, 45, 65, 0, 96, 29, 65, 0, 224, 6, 65, 0, 224, 251, 64, 0, 224, 219, 192, 0, 224, 251, 192, 0, 224, 219, 192, 0, 192, 237, 192, 0, 96, 13, 193, 0, 192, 237, 64, 0, 96, 13, 193, 0, 96, 29, 65, 0, 192, 205, 192, 0, 192, 237, 64, 0, 160, 165, 64, 0, 96, 22, 193, 0, 160, 254, 64, 0, 192, 237, 192, 0, 160, 165, 64, 0, 96, 22, 65, 0, 160, 254, 64, 0, 192, 237, 192, 0, 160, 165, 64, 0, 96, 22, 65, 0, 160, 254, 64, 0, 96, 22, 193, 0, 160, 254, 64, 0, 192, 237, 64, 0, 160, 165, 64, 0, 224, 251, 192, 0, 224, 219, 192, 0, 224, 251, 64, 0, 224, 13, 65, 0, 224, 251, 192, 0, 224, 13, 65, 0, 224, 251, 64, 0, 224, 219, 192, 0, 96, 22, 193, 0, 224, 119, 191, 0, 96, 22, 65, 0, 0, 128, 63, 0, 96, 22, 193, 0, 0, 128, 63, 0, 96, 22, 65, 0, 224, 119, 191, 0, 32, 218, 191, 0, 0, 128, 63, 0, 32, 218, 63, 0, 224, 119, 191, 0, 32, 218, 63, 0, 0, 128, 63, 0, 32, 218, 191, 0, 224, 119, 191, 0, 96, 22, 193, 0, 0, 128, 63, 0, 96, 22, 65, 0, 224, 119, 191, 0, 96, 22, 65, 0, 0, 128, 63, 0, 96, 22, 193, 0, 224, 119, 191, 0, 32, 218, 191, 0, 32, 11, 65, 0, 32, 218, 63, 0, 192, 65, 65, 0, 32, 218, 191, 0, 192, 65, 65, 0, 32, 218, 63, 0, 32, 11, 65, 0, 224, 251, 64, 0, 224, 119, 191, 0, 224, 251, 192, 0, 224, 59, 192, 0, 224, 251, 64, 0, 224, 59, 192, 0, 224, 251, 192, 0, 224, 119, 191, 0, 32, 218, 191, 0, 0, 128, 63, 0, 32, 218, 63, 0, 224, 119, 191, 0, 32, 218, 63, 0, 0, 128, 63, 0, 32, 218, 191, 0, 224, 119, 191, 0, 224, 60, 65, 0, 96, 38, 65, 0, 96, 22, 65, 0, 224, 44, 193, 0, 224, 60, 65, 0, 96, 6, 193, 0, 96, 22, 65, 0, 224, 76, 65, 0, 96, 22, 193, 0, 224, 44, 193, 0, 96, 22, 193, 0, 224, 76, 65, 0, 224, 60, 193, 0, 96, 6, 193, 0, 224, 60, 193, 0, 96, 38, 65, 0, 96, 22, 193, 0, 160, 254, 64, 0, 192, 237, 64, 0, 160, 165, 64, 0, 96, 22, 65, 0, 160, 254, 64, 0, 192, 237, 192, 0, 160, 165, 64),
"format": 4119,
"index_count": 180,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 1, 0, 0, 0, 3, 0, 4, 0, 5, 0, 6, 0, 5, 0, 4, 0, 7, 0, 8, 0, 9, 0, 10, 0, 9, 0, 8, 0, 11, 0, 12, 0, 13, 0, 14, 0, 13, 0, 12, 0, 15, 0, 16, 0, 17, 0, 18, 0, 17, 0, 16, 0, 19, 0, 20, 0, 21, 0, 22, 0, 21, 0, 20, 0, 23, 0, 24, 0, 25, 0, 26, 0, 25, 0, 24, 0, 27, 0, 28, 0, 29, 0, 30, 0, 29, 0, 28, 0, 31, 0, 32, 0, 33, 0, 34, 0, 33, 0, 32, 0, 35, 0, 36, 0, 37, 0, 38, 0, 37, 0, 36, 0, 39, 0, 40, 0, 41, 0, 42, 0, 41, 0, 40, 0, 43, 0, 44, 0, 45, 0, 46, 0, 45, 0, 44, 0, 47, 0, 47, 0, 44, 0, 48, 0, 47, 0, 48, 0, 49, 0, 49, 0, 48, 0, 50, 0, 50, 0, 48, 0, 51, 0, 46, 0, 52, 0, 44, 0, 52, 0, 46, 0, 53, 0, 52, 0, 53, 0, 51, 0, 51, 0, 53, 0, 54, 0, 51, 0, 54, 0, 55, 0, 51, 0, 55, 0, 50, 0, 56, 0, 57, 0, 58, 0, 57, 0, 56, 0, 59, 0, 60, 0, 61, 0, 62, 0, 61, 0, 60, 0, 63, 0, 64, 0, 65, 0, 66, 0, 65, 0, 64, 0, 67, 0, 68, 0, 69, 0, 70, 0, 69, 0, 68, 0, 71, 0, 72, 0, 73, 0, 74, 0, 73, 0, 72, 0, 75, 0, 76, 0, 77, 0, 78, 0, 77, 0, 76, 0, 79, 0, 80, 0, 81, 0, 82, 0, 81, 0, 80, 0, 83, 0, 84, 0, 85, 0, 86, 0, 85, 0, 84, 0, 87, 0, 88, 0, 89, 0, 90, 0, 89, 0, 88, 0, 91, 0, 92, 0, 93, 0, 94, 0, 93, 0, 92, 0, 95, 0, 93, 0, 95, 0, 96, 0, 96, 0, 95, 0, 97, 0, 96, 0, 97, 0, 98, 0, 98, 0, 97, 0, 99, 0, 100, 0, 101, 0, 102, 0, 101, 0, 100, 0, 103, 0),
"material": SubResource("1"),
"name": "metal",
"primitive": 3,
"vertex_count": 104,
"vertex_data": PackedByteArray(154, 153, 153, 190, 205, 204, 76, 61, 54, 126, 116, 62, 255, 191, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 0, 0, 0, 0, 154, 153, 153, 62, 255, 191, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 0, 0, 0, 0, 54, 126, 116, 62, 255, 191, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 205, 204, 76, 61, 154, 153, 153, 62, 255, 191, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 62, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 62, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 62, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 62, 0, 0, 255, 191, 0, 0, 0, 0, 54, 126, 116, 62, 205, 204, 76, 61, 154, 153, 153, 62, 255, 255, 255, 223, 0, 0, 0, 0, 0, 0, 128, 62, 205, 204, 204, 61, 9, 75, 65, 62, 255, 255, 255, 223, 0, 0, 0, 0, 154, 153, 153, 62, 205, 204, 76, 61, 54, 126, 116, 62, 255, 255, 255, 223, 0, 0, 0, 0, 9, 75, 65, 62, 205, 204, 204, 61, 0, 0, 128, 62, 255, 255, 255, 223, 0, 0, 0, 0, 0, 0, 128, 190, 205, 204, 204, 61, 9, 75, 65, 190, 255, 63, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 205, 204, 76, 61, 154, 153, 153, 190, 255, 63, 255, 191, 0, 0, 0, 0, 9, 75, 65, 190, 205, 204, 204, 61, 0, 0, 128, 190, 255, 63, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 205, 204, 76, 61, 54, 126, 116, 190, 255, 63, 255, 191, 0, 0, 0, 0, 154, 153, 153, 62, 205, 204, 76, 61, 54, 126, 116, 62, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 128, 62, 205, 204, 204, 61, 9, 75, 65, 190, 255, 255, 255, 255, 0, 0, 0, 0, 154, 153, 153, 62, 205, 204, 76, 61, 54, 126, 116, 190, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 128, 62, 205, 204, 204, 61, 9, 75, 65, 62, 255, 255, 255, 255, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 190, 255, 255, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 190, 255, 255, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 190, 255, 255, 255, 191, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 190, 255, 255, 255, 191, 0, 0, 0, 0, 154, 153, 153, 62, 0, 0, 0, 0, 54, 126, 116, 62, 255, 255, 255, 223, 0, 0, 0, 0, 54, 126, 116, 62, 205, 204, 76, 61, 154, 153, 153, 62, 255, 255, 255, 223, 0, 0, 0, 0, 154, 153, 153, 62, 205, 204, 76, 61, 54, 126, 116, 62, 255, 255, 255, 223, 0, 0, 0, 0, 54, 126, 116, 62, 0, 0, 0, 0, 154, 153, 153, 62, 255, 255, 255, 223, 0, 0, 0, 0, 154, 153, 153, 62, 0, 0, 0, 0, 54, 126, 116, 190, 255, 255, 255, 255, 0, 0, 0, 0, 154, 153, 153, 62, 205, 204, 76, 61, 54, 126, 116, 62, 255, 255, 255, 255, 0, 0, 0, 0, 154, 153, 153, 62, 205, 204, 76, 61, 54, 126, 116, 190, 255, 255, 255, 255, 0, 0, 0, 0, 154, 153, 153, 62, 0, 0, 0, 0, 54, 126, 116, 62, 255, 255, 255, 255, 0, 0, 0, 0, 54, 126, 116, 62, 0, 0, 0, 0, 154, 153, 153, 190, 0, 0, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 205, 204, 76, 61, 154, 153, 153, 190, 0, 0, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 0, 0, 0, 0, 154, 153, 153, 190, 0, 0, 255, 191, 0, 0, 0, 0, 54, 126, 116, 62, 205, 204, 76, 61, 154, 153, 153, 190, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 190, 255, 127, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 62, 255, 127, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 190, 255, 127, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 62, 255, 127, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 205, 204, 76, 61, 154, 153, 153, 62, 255, 191, 255, 191, 0, 0, 0, 0, 0, 0, 128, 190, 205, 204, 204, 61, 9, 75, 65, 62, 255, 191, 255, 191, 0, 0, 0, 0, 9, 75, 65, 190, 205, 204, 204, 61, 0, 0, 128, 62, 255, 191, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 205, 204, 76, 61, 54, 126, 116, 62, 255, 191, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 190, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 128, 62, 205, 204, 204, 61, 9, 75, 65, 190, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 128, 62, 205, 204, 204, 61, 9, 75, 65, 62, 0, 0, 255, 191, 0, 0, 0, 0, 9, 75, 65, 62, 205, 204, 204, 61, 0, 0, 128, 190, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 190, 0, 0, 255, 191, 0, 0, 0, 0, 9, 75, 65, 190, 205, 204, 204, 61, 0, 0, 128, 190, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 128, 190, 205, 204, 204, 61, 9, 75, 65, 190, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 62, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 62, 0, 0, 255, 191, 0, 0, 0, 0, 9, 75, 65, 62, 205, 204, 204, 61, 0, 0, 128, 62, 0, 0, 255, 191, 0, 0, 0, 0, 9, 75, 65, 190, 205, 204, 204, 61, 0, 0, 128, 62, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 128, 190, 205, 204, 204, 61, 9, 75, 65, 62, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 128, 190, 205, 204, 204, 61, 9, 75, 65, 62, 255, 127, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 205, 204, 76, 61, 54, 126, 116, 190, 255, 127, 255, 191, 0, 0, 0, 0, 0, 0, 128, 190, 205, 204, 204, 61, 9, 75, 65, 190, 255, 127, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 205, 204, 76, 61, 54, 126, 116, 62, 255, 127, 255, 191, 0, 0, 0, 0, 9, 75, 65, 62, 205, 204, 204, 61, 0, 0, 128, 190, 0, 0, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 205, 204, 76, 61, 154, 153, 153, 190, 0, 0, 255, 191, 0, 0, 0, 0, 54, 126, 116, 62, 205, 204, 76, 61, 154, 153, 153, 190, 0, 0, 255, 191, 0, 0, 0, 0, 9, 75, 65, 190, 205, 204, 204, 61, 0, 0, 128, 190, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 62, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 190, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 190, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 62, 0, 0, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 205, 204, 76, 61, 54, 126, 116, 190, 255, 127, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 0, 0, 0, 0, 54, 126, 116, 62, 255, 127, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 0, 0, 0, 0, 54, 126, 116, 190, 255, 127, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 205, 204, 76, 61, 54, 126, 116, 62, 255, 127, 255, 191, 0, 0, 0, 0, 154, 153, 153, 62, 0, 0, 0, 0, 54, 126, 116, 190, 0, 0, 255, 223, 0, 0, 0, 0, 54, 126, 116, 62, 205, 204, 76, 61, 154, 153, 153, 190, 0, 0, 255, 223, 0, 0, 0, 0, 54, 126, 116, 62, 0, 0, 0, 0, 154, 153, 153, 190, 0, 0, 255, 223, 0, 0, 0, 0, 154, 153, 153, 62, 205, 204, 76, 61, 54, 126, 116, 190, 0, 0, 255, 223, 0, 0, 0, 0, 54, 126, 116, 190, 0, 0, 0, 0, 154, 153, 153, 62, 255, 255, 255, 191, 0, 0, 0, 0, 54, 126, 116, 62, 205, 204, 76, 61, 154, 153, 153, 62, 255, 255, 255, 191, 0, 0, 0, 0, 54, 126, 116, 62, 0, 0, 0, 0, 154, 153, 153, 62, 255, 255, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 205, 204, 76, 61, 154, 153, 153, 62, 255, 255, 255, 191, 0, 0, 0, 0, 0, 0, 128, 62, 205, 204, 204, 61, 9, 75, 65, 190, 0, 0, 255, 223, 0, 0, 0, 0, 54, 126, 116, 62, 205, 204, 76, 61, 154, 153, 153, 190, 0, 0, 255, 223, 0, 0, 0, 0, 154, 153, 153, 62, 205, 204, 76, 61, 54, 126, 116, 190, 0, 0, 255, 223, 0, 0, 0, 0, 9, 75, 65, 62, 205, 204, 204, 61, 0, 0, 128, 190, 0, 0, 255, 223, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 190, 255, 255, 255, 255, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 62, 255, 255, 255, 255, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 190, 255, 255, 255, 255, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 62, 255, 255, 255, 255, 0, 0, 0, 0, 54, 126, 116, 190, 0, 0, 0, 0, 154, 153, 153, 190, 255, 63, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 205, 204, 76, 61, 54, 126, 116, 190, 255, 63, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 0, 0, 0, 0, 54, 126, 116, 190, 255, 63, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 205, 204, 76, 61, 154, 153, 153, 190, 255, 63, 255, 191, 0, 0, 0, 0, 154, 153, 153, 62, 0, 0, 0, 0, 54, 126, 116, 190, 255, 255, 255, 191, 0, 0, 0, 0, 54, 126, 116, 62, 0, 0, 0, 0, 154, 153, 153, 62, 255, 255, 255, 191, 0, 0, 0, 0, 154, 153, 153, 62, 0, 0, 0, 0, 54, 126, 116, 62, 255, 255, 255, 191, 0, 0, 0, 0, 54, 126, 116, 62, 0, 0, 0, 0, 154, 153, 153, 190, 255, 255, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 0, 0, 0, 0, 154, 153, 153, 62, 255, 255, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 0, 0, 0, 0, 154, 153, 153, 190, 255, 255, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 0, 0, 0, 0, 54, 126, 116, 62, 255, 255, 255, 191, 0, 0, 0, 0, 154, 153, 153, 190, 0, 0, 0, 0, 54, 126, 116, 190, 255, 255, 255, 191, 0, 0, 0, 0, 54, 126, 116, 190, 205, 204, 76, 61, 154, 153, 153, 62, 255, 255, 255, 191, 0, 0, 0, 0, 9, 75, 65, 62, 205, 204, 204, 61, 0, 0, 128, 62, 255, 255, 255, 191, 0, 0, 0, 0, 54, 126, 116, 62, 205, 204, 76, 61, 154, 153, 153, 62, 255, 255, 255, 191, 0, 0, 0, 0, 9, 75, 65, 190, 205, 204, 204, 61, 0, 0, 128, 62, 255, 255, 255, 191, 0, 0, 0, 0)
}, {
"aabb": AABB(-0.2, 0.05, -0.2, 0.40001, 0.1, 0.4),
"attribute_data": PackedByteArray(0, 224, 251, 64, 0, 224, 13, 65, 0, 224, 251, 192, 0, 224, 219, 192, 0, 224, 251, 64, 0, 224, 219, 192, 0, 224, 251, 192, 0, 224, 13, 65, 0, 224, 188, 192, 0, 224, 156, 192, 0, 224, 188, 64, 0, 224, 220, 64, 0, 224, 188, 192, 0, 224, 220, 64, 0, 224, 188, 64, 0, 224, 156, 192, 0, 224, 251, 192, 0, 160, 165, 64, 0, 224, 188, 64, 0, 0, 25, 64, 0, 224, 251, 64, 0, 160, 165, 64, 0, 224, 188, 192, 0, 0, 25, 64, 0, 224, 188, 64, 0, 0, 25, 64, 0, 224, 251, 192, 0, 160, 165, 64, 0, 224, 188, 192, 0, 0, 25, 64, 0, 224, 251, 64, 0, 160, 165, 64, 0, 224, 251, 192, 0, 160, 165, 64, 0, 224, 188, 64, 0, 0, 25, 64, 0, 224, 251, 64, 0, 160, 165, 64, 0, 224, 188, 192, 0, 0, 25, 64, 0, 224, 188, 192, 0, 0, 25, 64, 0, 224, 251, 64, 0, 160, 165, 64, 0, 224, 251, 192, 0, 160, 165, 64, 0, 224, 188, 64, 0, 0, 25, 64, 0, 224, 251, 192, 0, 224, 119, 191, 0, 224, 251, 64, 0, 0, 128, 63, 0, 224, 251, 192, 0, 0, 128, 63, 0, 224, 251, 64, 0, 224, 119, 191, 0, 224, 251, 192, 0, 0, 128, 63, 0, 224, 251, 64, 0, 224, 119, 191, 0, 224, 251, 64, 0, 0, 128, 63, 0, 224, 251, 192, 0, 224, 119, 191, 0, 224, 251, 192, 0, 0, 128, 63, 0, 224, 251, 64, 0, 224, 119, 191, 0, 224, 251, 64, 0, 0, 128, 63, 0, 224, 251, 192, 0, 224, 119, 191, 0, 224, 251, 64, 0, 0, 128, 63, 0, 224, 251, 192, 0, 224, 119, 191, 0, 224, 251, 64, 0, 224, 119, 191, 0, 224, 251, 192, 0, 0, 128, 63),
"format": 4119,
"index_count": 60,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 1, 0, 0, 0, 3, 0, 4, 0, 5, 0, 6, 0, 5, 0, 4, 0, 7, 0, 8, 0, 9, 0, 10, 0, 9, 0, 8, 0, 11, 0, 12, 0, 13, 0, 14, 0, 13, 0, 12, 0, 15, 0, 16, 0, 17, 0, 18, 0, 17, 0, 16, 0, 19, 0, 20, 0, 21, 0, 22, 0, 21, 0, 20, 0, 23, 0, 24, 0, 25, 0, 26, 0, 25, 0, 24, 0, 27, 0, 28, 0, 29, 0, 30, 0, 29, 0, 28, 0, 31, 0, 32, 0, 33, 0, 34, 0, 33, 0, 32, 0, 35, 0, 36, 0, 37, 0, 38, 0, 37, 0, 36, 0, 39, 0),
"material": SubResource("2"),
"name": "heart",
"primitive": 3,
"vertex_count": 40,
"vertex_data": PackedByteArray(205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 190, 255, 255, 255, 191, 115, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 62, 255, 255, 255, 191, 108, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 62, 255, 255, 255, 191, 47, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 190, 255, 255, 255, 191, 109, 0, 0, 0, 154, 153, 25, 62, 154, 153, 25, 62, 154, 153, 25, 62, 0, 0, 255, 191, 47, 0, 0, 0, 154, 153, 25, 190, 154, 153, 25, 62, 154, 153, 25, 190, 0, 0, 255, 191, 101, 0, 0, 0, 154, 153, 25, 62, 154, 153, 25, 62, 154, 153, 25, 190, 0, 0, 255, 191, 97, 0, 0, 0, 154, 153, 25, 190, 154, 153, 25, 62, 154, 153, 25, 62, 0, 0, 255, 191, 107, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 62, 255, 255, 255, 191, 121, 0, 0, 0, 154, 153, 25, 62, 154, 153, 25, 62, 154, 153, 25, 62, 255, 255, 255, 191, 108, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 62, 255, 255, 255, 191, 114, 0, 0, 0, 154, 153, 25, 190, 154, 153, 25, 62, 154, 153, 25, 62, 255, 255, 255, 191, 100, 0, 0, 0, 154, 153, 25, 190, 154, 153, 25, 62, 154, 153, 25, 62, 255, 127, 255, 191, 104, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 190, 255, 127, 255, 191, 95, 0, 0, 0, 154, 153, 25, 190, 154, 153, 25, 62, 154, 153, 25, 190, 255, 127, 255, 191, 101, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 62, 255, 127, 255, 191, 101, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 62, 255, 255, 255, 255, 101, 0, 0, 0, 154, 153, 25, 62, 154, 153, 25, 62, 154, 153, 25, 190, 255, 255, 255, 255, 104, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 190, 255, 255, 255, 255, 82, 0, 0, 0, 154, 153, 25, 62, 154, 153, 25, 62, 154, 153, 25, 62, 255, 255, 255, 255, 49, 0, 0, 0, 154, 153, 25, 62, 154, 153, 25, 62, 154, 153, 25, 190, 0, 0, 255, 191, 97, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 190, 0, 0, 255, 191, 53, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 190, 0, 0, 255, 191, 101, 0, 0, 0, 154, 153, 25, 190, 154, 153, 25, 62, 154, 153, 25, 190, 0, 0, 255, 191, 51, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 190, 255, 127, 255, 191, 99, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 62, 255, 127, 255, 191, 57, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 190, 255, 127, 255, 191, 50, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 62, 255, 127, 255, 191, 49, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 62, 255, 255, 255, 191, 49, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 62, 255, 255, 255, 191, 55, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 62, 255, 255, 255, 191, 102, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 62, 255, 255, 255, 191, 54, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 190, 0, 0, 255, 191, 50, 0, 0, 0, 205, 204, 76, 190, 205, 204, 204, 61, 205, 204, 76, 190, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 190, 205, 204, 76, 61, 205, 204, 76, 190, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 190, 0, 0, 255, 191, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 190, 255, 255, 255, 255, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 62, 255, 255, 255, 255, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 204, 61, 205, 204, 76, 190, 255, 255, 255, 255, 0, 0, 0, 0, 205, 204, 76, 62, 205, 204, 76, 61, 205, 204, 76, 62, 255, 255, 255, 255, 0, 0, 0, 0)
}]

[sub_resource type="BoxShape3D" id="4"]
size = Vector3(0.135542, 0.134771, 0.133402)

[sub_resource type="SphereShape3D" id="5"]
radius = 0.111133

[node name="Crate" type="RigidBody3D" groups=["Crate"]]
collision_layer = 4
collision_mask = 5
can_sleep = false
freeze_mode = 1
script = ExtResource("1")
PRESSED_COLOR = Color(0.68, 2, 0.18, 1)

[node name="Crate" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh = ExtResource("2")

[node name="Button" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.249534, 0)
mesh = SubResource("3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.135191, 0)
shape = SubResource("4")

[node name="ButtonPressArea" type="Area3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0.273989, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ButtonPressArea"]
shape = SubResource("5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
aabb = AABB(-7.42139, -6.53961, -6.47432, 14.8428, 13.0792, 12.9486)

[connection signal="body_entered" from="ButtonPressArea" to="." method="_on_ButtonPressArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_VisibilityNotifier_screen_exited"]
